<resources xmlns:tools="http://schemas.android.com/tools">

    <!--   下面重写即可自定义   -->
    <string name="zfile_title">ZT目录管理</string>
    <string name="zfile_menu_down">完成</string>
    <string name="zfile_root_path">根目录(点击导航栏返回)</string>
    <string name="zfile_path">指定目录</string>
    <string name="zfile_menu_order">排序方式</string>
    <string name="zifle_menu_hidden">不显示隐藏文件</string>
    <string name="zfile_menu_show">显示隐藏文件</string>
    <string name="zfile_sort_title">排序方式</string>
    <string name="zfile_sort_default">&#160;默认（无顺序）</string>
    <string name="zfile_sort_by_name">&#160;名称</string>
    <string name="zfile_sort_by_time">&#160;时间</string>
    <string name="zfile_sort_by_size">&#160;大小</string>
    <string name="zfile_sort_ss">顺序</string>
    <string name="zfile_sort_sx">&#160;升序</string>
    <string name="zfile_sort_jx">&#160;降序</string>
    <string name="zfile_down">确定</string>
    <string name="zfile_cancel">取消</string>
    <string name="zfile_info_title">文件详情</string>
    <string name="zfile_info_name">文件名称：</string>
    <string name="zfile_info_type">文件类型：</string>
    <string name="zfile_info_size">文件大小：</string>
    <string name="zfile_info_time">修改时间：</string>
    <string name="zfile_info_time2">创建时间：</string>
    <string name="zfile_info_path">文件路径：</string>
    <string name="zfile_info_more">显示更多</string>
    <string name="zfile_info_duration">媒体时长：</string>
    <string name="zfile_info_loadding">获取中</string>
    <string name="zfile_info_wh">宽高比率：</string>
    <string name="zfile_info_other">其他信息：</string>
    <string name="zfile_select_forder">请选择文件夹</string>
    <string name="zfile_info_rename">请输入文件名称</string>
    <string name="zifle_rename_title">文件重命名</string>
    <string name="zfile_pic">图片</string>
    <string name="zfile_video">视频</string>
    <string name="zfile_txt">文档</string>
    <string name="zfile_other">其他</string>
    <string name="zfile_loading">请稍后</string>
    <string name="zfile_qw_loading" tools:ignore="TypographyEllipsis">文件获取中...</string>
    <string name="zfile_duplicate">副本_</string>
    <string name="zfile_permission_bad">权限申请失败</string>
    <string name="zfile_11_title">温馨提示</string>
    <string name="zfile_11_content">访问文件需要您同意“允许访问所有文件权限”才能正常使用！</string>
    <string name="zfile_11_bad">同意“允许访问所有文件权限”才能正常使用！</string>
    <string name="zfile_permission_bad2">您已拒绝权限的申请，该功能暂时无法使用，请您同意权限后继续！</string>
    <string name="zfile_permission_bad3">重新获取</string>
    <string name="zfile_no_app_open_file">文件类型可能不匹配或找不到打开该文件类型的程序，打开失败</string>
    <string name="zfile_can_not_open">不支持预览该文件</string>
    <string name="zfile_new_folder">创建文件夹</string>
    <string name="zfile_new_file">创建文件</string>
    <string name="zfile_new_sdcard">创建SD卡链接</string>
    <string name="zfile_create_file_error">创建失败!</string>
    <string name="zfile_name_not_empty">名称不能为空!</string>
    <string name="zfile_create_ok">创建成功</string>
    <string name="zfile_input_name">请输入名称</string>
    <string name="zfile_open_folder">在终端打开当前目录</string>
    <string name="zfile_git_clone">在此目录克隆仓库</string>
    <string name="zfile_wget">使用wget下载到此目录</string>
    <string name="zfile_git_clone_empty">网址不能为空!</string>
    <string name="zfile_successfully_decompressed">解压完成!</string>
    <string name="storage_error">"~/storage"目录在操作过程中目录丢失，请手动termux-setup-storage创建或重新打开"容器管理"让程序自动创建</string>
    <string name="unrecognized_compression_format">不能识别的数据包!</string>
    <string name="system_create_container">创建恢复的系统容器</string>
    <string name="system_create_container_empty">系统容器名称不能为空</string>
    <string name="正在载入中">正在载入中,请稍后。</string>
    <string name="system_create_container_fail">系统创建失败!请重试</string>
    <string name="system_restore_success">系统恢复完成,请在切换系统，切换您的系统</string>
    <string name="input_system_name">请输入新的系统盘名称</string>

    <string name="install_module_download">安装模块(下载模块)</string>
    <string name="install_module_message">注意:安装后不能卸载,只对当前容器生效(如果路径已经放入模块包但是不显示，请检查SD卡权限)</string>
    <string name="install_empty">内部存储/xinhao/module,没有模块包</string>
    <string name="install_module">安装模块</string>
    <string name="install_message">控制台:\n开始安装模块</string>
    <string name="确定">确定</string>
    <string name="data_file_name">数据包名称:</string>
    <string name="data_file_size">数据包大小:</string>
    <string name="data_file_path">数据包路径:</string>
    <string name="file_delete_msg">确定要永久删除此数据包？删除之后可没有办法恢复噢。</string>
    <string name="file_delete_fail">无法删除此文件，请在内部存储手动删除!</string>
    <string name="delete_restore_data">删除此数据包</string>
    <string name="delete_module_data">删除此模块包</string>
    <string name="data_module_name">模块包名称:</string>
    <string name="data_module_size">模块包大小:</string>
    <string name="data_module_path">模块包路径:</string>
    <string name="file_module_msg">确定要永久删除此模块包？删除之后可没有办法恢复噢。</string>
    <string name="提示">提示</string>
    <string name="删除成功">删除成功</string>
    <string name="取消">取消</string>
    <string name="install_module_switch">您确定要安装此模块包?</string>
    <string name="install_module_msg1">正在准备安装模块</string>
    <string name="install_module_msg2">正在展开安装模块</string>
    <string name="install_module_msg3">展开模块错误！</string>
    <string name="install_module_msg4">模块展开完成,开始安装</string>
    <string name="install_module_msg5">无效模块安装包,安装文件[INSTALL.txt]无法找到</string>
    <string name="install_module_msg6">安装脚本错误,无法找到[目标文件][目标位置][权限]3个参数</string>
    <string name="install_module_msg7">目标文件存在！选择覆盖此文件</string>
    <string name="install_module_msg8">目标文件存在！选择覆盖此文件错误</string>
    <string name="install_module_msg9">权限设置错误, 设置默认0700</string>
    <string name="install_module_msg10">模块安装完成!有些功能需要重启后生效</string>
    <string name="install_module_msg11">检测到权限为空,将跳过设置文件权限</string>
    <string name="module_un7z_">模块展开中…</string>
    <string name="module_install_pro">正在处理命令:</string>
    <string name="错误">错误</string>
    <string name="install_module_clear_tempmodule">清空临时文件夹出现异常,请手动删除~/tempmodule文件夹!</string>

    <string name="open_http_files">打开网页文件(端口:19956)</string>
    <string name="close_http_files">关闭网页文件(端口:19956)</string>
    <string name="http_folder">文件夹</string>
    <string name="http_file">文件</string>
    <string name="no_http_msg">似乎没有链接网络?请手动在浏览器打开本机IP:19956</string>
    <string name="zerotermux_test">测试(ZT开发者)</string>
</resources>
