<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_zfile_down"
        android:title="@string/zfile_menu_down"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/new_file"
        android:title="@string/zfile_new_file"
        app:showAsAction="never" />

    <item
        android:id="@+id/new_folder"
        android:title="@string/zfile_new_folder"
        app:showAsAction="never" />

    <item
        android:id="@+id/create_sdcard"
        android:title="@string/zfile_new_sdcard"
        app:showAsAction="never" />

    <item
        android:id="@+id/open_folder"
        android:title="@string/zfile_open_folder"
        app:showAsAction="never" />

    <item
        android:id="@+id/git_clone"
        android:title="@string/zfile_git_clone"
        app:showAsAction="never" />

    <item
        android:id="@+id/wget"
        android:title="@string/zfile_wget"
        app:showAsAction="never" />
    <item
        android:id="@+id/open_http"
        android:title="@string/open_http_files"
        app:showAsAction="never" />
    <item
        android:id="@+id/close_http"
        android:title="@string/close_http_files"
        app:showAsAction="never" />
    <item
        android:id="@+id/zt_developer"
        android:title="@string/zerotermux_test"
        app:showAsAction="never" />


</menu>
